[package]
name = "complex_i"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
description = "A complex number library in rust."
readme = "README.md"
repository = "https://github.com/backspc3/complex-I"
keywords = ["math", "complex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"
